# spec-loop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  install.sh  package.json  uninstall.sh
.agents/skills/review/: SKILL.md
.agents/skills/spec/: SKILL.md
.agents/skills/spec-loop-spec/: SKILL.md
.agents/skills/spec-loop-status/: SKILL.md
.agents/skills/status/: SKILL.md
.agents/templates/: progress.md  spec.md  task.md
lib/core/: args.sh  config.sh  constants.sh  logging.sh  utils.sh
lib/engine/: loop.sh  parser.sh  prompt.sh  runner.sh  stream.sh
lib/safety/: circuit_breaker.sh  rate_limiter.sh  session.sh
lib/setup/: init.sh  preflight.sh
lib/tasks/: spec.sh  state.sh
lib/ui/: display.sh  preview.sh  spinner.sh  terminal.sh
src/: circuit_breaker.rs  claude.rs  cli.rs  commands.rs  config.rs  constants.rs  main.rs  prompts.rs  session.rs  spec.rs  ui.rs  util.rs
