[package]
name = "spec-loop"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "spec-loop"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
walkdir = "2"
